优化主题详情中关联表管理